# Core-CMSIS

./: CMakeLists.txt  README.md
